apps/authentik/middleware-chain-ext.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-auth-ext
  namespace: default
spec:
  chain:
    middlewares:
      - name: authentik-strip-headers
      - name: authentik-forwardauth-ext
