apps/authentik/middleware-strip-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-strip-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-authentik-username: ""
      X-authentik-groups: ""
      X-authentik-email: ""
      X-authentik-name: ""
      X-authentik-uid: ""
      X-authentik-grafana-role: ""
      Authorization: ""
