apps/authentik/service-proxy-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy-ext
spec:
  selector:
    app: authentik-proxy-ext
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: metrics
      port: 9300
      targetPort: 9300
