apps/authentik/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
spec:
  selector:
    app: authentik-server
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: metrics
      port: 9300
      targetPort: 9300
