apps/authentik/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-worker
spec:
  selector:
    app: authentik-worker
  ports:
    - name: metrics
      port: 9300
      targetPort: 9300
